[package]
name = "ke04z4-pac"
version = "0.1.0"
authors = ["Jonathan Pallant <github@thejpster.org.uk>"]
edition = "2018"
description = "PAC for NXP Kinetis MKE04Z4 and MKE04Z8 microcontrollers"
license = "CC0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m="0.7"
vcell="*"
